First Release  :rocket:
Movie Trivia LWC Game App

--- a/src/modules/my/wtt_triviagame/wtt_triviagame.html
+++ b/src/modules/my/wtt_triviagame/wtt_triviagame.html
@@ -209,7 +209,7 @@
                                         </div>
                                         <div class="slds-col">
                                             <lightning-button variant="neutral" label="Next" title="Next"
-                                                icon-name="utility:product_transfer" icon-position="right"
+                                                icon-name="utility:play" icon-position="right"
                                                 class="slds-var-m-left_small" onclick={randomize}>
                                             </lightning-button>
                                         </div>
