--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,11 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2.0">
-    <meta http-equiv="Content-Security-Policy" content="default-src *; connect-src 'self';font-src 'self'; img-src * 'self' data: https:; style-src 'self' 'unsafe-inline'; script-src 'self'">
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; connect-src 'self';font-src 'self'; img-src * 'self' data: https:; style-src 'self' 'unsafe-inline'; script-src 'self'"> -->
+    <!-- Below is Super Relaxed CSP settings to allow for Third party images to load. -->
+    <meta http-equiv="Content-Security-Policy" content="default-src *;
+   img-src * 'self' data: https:; script-src 'self' 'unsafe-inline' 'unsafe-eval' *;
+   style-src  'self' 'unsafe-inline' *">
     <title>Movie Trivia LWC Game</title>
     <!-- <style>
         body {
